# FILEPATH: /home/mees/projects/pysfp/setup.cfg

[metadata]
name = pysfp
version = 0.0.1
author = Mees Hendriks
author_email = mees@hendriks.org
description = A Python implementation of the Scaffold Fingerprint using RDKit
license = MIT

[options]
packages = find:
install_requires =
    rdkit

[options.extras_require]
test =
    pytest>=6.0.0


[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[tool:pytest]
addopts = --cov=pysfp --cov-report=html
